--- a/src/components/wc-menu-button/wc-menu-button.css
+++ b/src/components/wc-menu-button/wc-menu-button.css
@@ -1,6 +1,6 @@
 .menu-icon {
   margin: 0;
-  padding: 0;
+  width: var(--wc-menu-button-width, 37px);
   position: relative;
   display: inline-block;
   -webkit-transform: rotate(0deg);
@@ -23,7 +23,7 @@
 }
 
 .menu-icon:hover {
-  transform: scale(1.05);
+  opacity: var(--wc-menu-button-hover-opacity, 0.75);
 }
 
 .no-scale:hover {
@@ -35,8 +35,8 @@
   position: absolute;
   height: 20%;
   width: 100%;
-  background: #000000;
-  border-radius: 9px;
+  background: var(--wc-menu-button-color, #000000);
+  border-radius: 10%;
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
@@ -50,7 +50,7 @@
 }
 
 .menu-icon span:nth-child(1) {
-  top: 0px;
+  top: 0%;
 }
 
 .menu-icon span:nth-child(2),
